src/App.scss
body {
	--main-color: hsl(187deg 100% 50%);
	--dark-color: #003f54;
	--secondary-color: hsl(347deg 100% 50%);
	--secondary-color-dark: hsl(347deg, 50%, 20%);
	--background-color: #fff;

	--header-height: 5em;
	--header-mobile-nav-height: 0em;

	--svg-stroke-width: 8px;

	@media (width < 500px) {
		--header-height: 6em;
	}
}

::selection {
	background-color: hsl(344deg 100% 41%);
	color: #fff;
}

h1,
h2 {
	color: #0083a1;
	font-weight: 100;
	font-size: 2.5em;
	line-height: 1;
	margin: 0.7rem 1rem;
}
h2 {
	font-size: 2em;
}

button {
	position: relative;
	appearance: none;
	background: none;
	border: none;
	cursor: pointer;

	margin: 0.5em;
	padding: 0.2em 0.7em 0.3em 0.7em;

	font-family: inherit;
	font-size: 0.95em;
	color: var(--dark-color);
	&:hover {
		color: #0083a1;
	}

	transition: scale 0.3s;
	&:hover {
		scale: 1.05;
	}
}

a {
	text-decoration: none;
	color: inherit;
}

a:not(.button) {
	position: relative;
	transition: scale 0.2s, color 0.2s;
	color: var(--dark-color);

	&:hover {
		scale: 1.05;
		color: #0083a1;
	}

	&:after {
		content: "";
		position: absolute;
		bottom: 0;
		width: 100%;
		height: 1px;
		clip-path: inset(30% 0 0 0);
		left: 0;
		border-bottom: 1px solid hsl(200, 47%, 50%);
		border-radius: 50%;
		scale: 0 1;
		transition: scale 0.2s;
	}

	&:hover:after {
		scale: 1 1;
		transition: scale 0.3s cubic-bezier(0.2, 1.8, 0.6, 0.7);
	}
}

///
///
///
///

.under-header {
	translate: 0 calc(var(--header-height, 5em) + var(--header-mobile-nav-height, 0em));
	min-height: calc(100vh - var(--header-height, 5em));
	width: 100%;
	display: flex;
	flex-direction: column;
	justify-content: space-between;

	transition: translate 0.2s;
}

main {
	width: 100%;

	display: flex;
	flex-direction: column;
	align-items: center;

	padding: 0 1em;
}

section {
	position: relative;
	margin: 1em 0;
	padding: 1em 0 2em 0;

	&:not(:last-of-type):after {
		content: "";
		position: absolute;
		bottom: 0;
		left: 0;
		width: 100%;
		height: 1px;
		clip-path: inset(50% 0 0 0); // hide fantom border in safari
		border-bottom: 1px solid var(--secondary-color-dark);
		border-radius: 50%;
	}
}

